--- a/style.css
+++ b/style.css
@@ -5,3 +5,111 @@
   font-style: normal;
   line-height: normal;
 }
+
+:root{
+  --primary-color: #0B0223;
+  --secondary-color: #FF42A5;
+  --linear-color: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+  --btn-color: #4EC5F7;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5rem 5rem;
+  background-color: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+}
+
+.logo>h2{
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: var(--primary-color);
+}
+
+.logo>h2>span{
+  color: var(--secondary-color);
+}
+
+header ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+header ul li{
+  list-style: none;
+}
+
+header ul li a{
+  text-decoration: none;
+  color: #3C354F;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.btn-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+  border-radius: 8px;
+  background-color: rgba(11, 2, 35, 0.10);
+  padding: 1.25rem 1.5rem;
+}
+
+.btn-div span{
+  color: #3C354F;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.btn-header{
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.btn-header>img{
+  width: 100%;
+}
+
+
+
+
+
+@media screen and (max-width:576px) {
+  header{
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1.5rem 0;
+  }
+
+  header ul{
+    flex-direction: column;
+  }
+
+}
+
+
+
+
+
+@media screen and (min-width:576px) and (max-width:992px) {
+  header{
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1.5rem 0;
+  }
+}
