--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@
   cursor: pointer;
 }
 
+.btn-primary:hover{
+  box-shadow: 2px 2px 4px gray;
+}
+
+.btn-secondary:hover{
+  box-shadow: 2px 2px 4px gray;
+}
+
  /* ........header section start........ */
 
 header{
@@ -285,25 +293,30 @@ header ul li a{
   position: relative;
 }
 
-.card:hover{
-  opacity: 0.8;
+.card:hover .watch-now{
+  visibility: visible;
 }
 
-.card:hover::before {
-  content: '';
+.watch-now{
   position: absolute;
-  top: 30%;
-  left: 45%;
-  width: 10%;
-  height: 10%;
-  background-image: url('icons/icon.png');
-  border-radius: 16px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url('icons/icon.png'), rgb(87, 86, 86) 50% / cover no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-blend-mode: overlay;
-  opacity: 0.6;
-  z-index: 1;
+  top: 0%;
+  left: 0%;
+  visibility: hidden;
+  background-color: black;
+  opacity: .7;
+  width: 100%;
+  height: 73.6%;
+  border-radius: .8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.watch-now>span{
+  color: #FF42A5;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 .card>img{
@@ -382,6 +395,43 @@ header ul li a{
 }
 
   /* ........featured section end........ */
+
+  /* ........category section start........ */
+
+.category{
+  margin: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1.75rem;
+}
+
+.btn-category{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: auto;
+  height: auto;
+  padding: .5rem;
+  border-radius: 3.5rem;
+  text-decoration: none;
+}
+
+.btn-category>span{
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1.25rem;
+}
+
+.btn-category:hover{
+  border: 1px solid var(--secondary-color);
+}
+
+.btn-category:hover span{
+  color: var(--secondary-color);
+}
 
 
 
@@ -469,6 +519,19 @@ header ul li a{
     margin-left: -5rem;
   }
 
+  .category{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    gap: 1rem;
+    overflow: hidden;
+    margin: 0;
+  }
+
+  .btn-category{
+    width: auto;
+  }
+
 }
 
 
@@ -553,6 +616,19 @@ header ul li a{
     width: 50%;
     margin-top: -10rem;
     margin-left: -5rem;
+  }
+
+  .category{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    gap: 1rem;
+    overflow: hidden;
+    margin: 0;
+  }
+
+  .btn-category{
+    width: auto;
   }
 
 }
